# WaveshareEmulator

./: .gitignore  README.md
waveshare-e-ink/: .cproject  .project  CMakeLists.txt
waveshare-e-ink/src/: main.cpp  waveshareEmulator.cpp
waveshare-e-ink/src/Include/: PreCompiller.h  main.h  waveshareEmulator.h
waveshare-e-ink/src/System/Types/GUI/: canvas.tpp  color.tpp  dotPixel.tpp  dotStyle.tpp  font.cpp  gc.tpp  lineStyle.tpp  point.tpp  rotate.cpp  shape.tpp  shapeColor.cpp  shapeFill.cpp  size.tpp
waveshare-e-ink/src/System/Types/GUI/Fonts/: font12.cpp  font16.cpp  font20.cpp  font24.cpp  font8.cpp
waveshare-e-ink/src/System/Types/GUI/Include/: canvas.h  color.h  dotPixel.h  dotStyle.h  font.h  gc.h  lineStyle.h  point.h  rotate.h  shape.h  (+3 more)
waveshare-e-ink/src/System/Types/Generic/: array.cpp  bits.cpp  checkedDataBuffer.tpp  counter.tpp  dataBuffer.tpp  defaultValue.tpp  digitalValue.tpp  genericCRC.tpp  length.tpp  limitedValue.tpp  pinSwitcher.cpp  randomList.tpp  range.tpp  switcher.cpp  value.tpp  valueCompareEx.tpp  zeroCompareEx.tpp
waveshare-e-ink/src/xLibLite/: XLibBaseWindow.cpp  XLibControl.cpp  XLibDisplay.cpp  XLibDisplay.tpp  XLibEventManager.cpp  XLibGC.cpp  XLibWindow.cpp  XLibWindowCreator.cpp  XLibWindowCreator.tpp  XLibWindowRegistry.cpp
waveshare-e-ink/src/xLibLite/Handlers/: XLibKeyHandler.cpp  XLibMouseHandler.cpp
waveshare-e-ink/src/xLibLite/Handlers/Include/: XLibKeyHandler.h  XLibMouseHandler.h
waveshare-e-ink/src/xLibLite/Include/: XLibBaseWindow.h  XLibControl.h  XLibDisplay.h  XLibEventManager.h  XLibGC.h  XLibWindow.h  XLibWindowCreator.h  XLibWindowRegistry.h
(+38 files in other folders)
